--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@
   .elementor-element.elementor-element-42fe8509
   > .elementor-background-overlay {
   background-color: #5e8bff;
-  /* background-image: url("https://nomeme.club/wp-content/uploads/2023/11/8669db0cb7e8f422f2c2565287631491.gif"); */
+  background-image: url("https://nomeme.club/wp-content/uploads/2023/11/8669db0cb7e8f422f2c2565287631491.gif");
   background-position: center center;
   background-size: 31% auto;
   opacity: 1;
@@ -460,7 +460,7 @@
 .elementor-7
   .elementor-element.elementor-element-2189666
   > .elementor-background-overlay {
-  /* background-image: url("./images/trump-trump-dance.gif"); */
+  background-image: url("./images/trump-trump-dance.gif");
   background-position: center center;
   background-size: contain;
   opacity: 0.45;
