--- a/style.css
+++ b/style.css
@@ -177,12 +177,12 @@
   .elementor-element.elementor-element-42fe8509
   > .elementor-background-overlay {
   background-color: #5e8bff;
-  background-image: url("https://nomeme.club/wp-content/uploads/2023/11/8669db0cb7e8f422f2c2565287631491.gif");
+  /* background-image: url("./images/back.webp"); */
   background-position: center center;
   background-size: 31% auto;
   opacity: 1;
   mix-blend-mode: screen;
-  transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+  /* /* transition: background 0.3s, border-radius 0.3s, opacity 0.3s; */
 }
 .elementor-7
   .elementor-element.elementor-element-42fe8509
@@ -396,9 +396,9 @@
 .elementor-7
   .elementor-element.elementor-element-4e69d797
   .elementor-heading-title {
-  color: #5ef2a3;
+  color: white;
   font-family: "comic sans", Sans-serif;
-  font-size: 17px;
+  font-size: 25px;
   font-weight: 400;
   text-shadow: 0px 0px 26px
     rgba(19.215081521739155, 239.7, 87.27781722589798, 0.82);
