--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@
   .elementor-element.elementor-element-2055296
   > .elementor-element-populated
   > .elementor-background-overlay {
-  background-image: url("./images/logo.png");
+  background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3)), url("./images/logo.png");
   background-position: center center;
   background-size: contain;
   opacity: 0.48;
